--- a/projekt_KacperNowak/projektKN_stop_web/WebContent/pages/admin/infoEdit.xhtml
+++ b/projekt_KacperNowak/projektKN_stop_web/WebContent/pages/admin/infoEdit.xhtml
@@ -6,7 +6,13 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+    <f:viewAction action="#{infoEditBB.onLoad()}" />
+</f:metadata>
+
 <ui:composition template="templates/main.xhtml">
+
+
 
 	<ui:define name="title">
 		Serwis STOP dla odlewni
