--- a/projekt_KacperNowak/projektKN_stop_web/WebContent/public/info.xhtml
+++ b/projekt_KacperNowak/projektKN_stop_web/WebContent/public/info.xhtml
@@ -6,7 +6,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition template="templates/main.xhtml">
+<ui:composition template="/templates/main.xhtml">
 
 	<ui:define name="title">
 		Aktualności STOP dla odlewni
